// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature/left-sidebar/LeftSidebarLink should render BadgeCountElement 1`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={{}}
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should render BadgeElement 1`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={{}}
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
    <div
      id="newItemBadge"
    />
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should render RemoveButton 1`] = `
<div
  className="left-sidebar-removeable-link-container"
>
  <Tooltip
    className="nav-link-tooltip"
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    isTabbable={false}
    position="middle-right"
    text="Feed"
    theme="default"
  >
    <LinkBase
      className=""
      style={{}}
    >
      <span
        className="left-sidebar-link-text"
      >
        Feed
      </span>
    </LinkBase>
  </Tooltip>
  <RemoveButton
    onClickRemove={[Function]}
    removeButtonHtmlAttributes={{}}
  />
</div>
`;

exports[`feature/left-sidebar/LeftSidebarLink should render a LinkComponent component 1`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={{}}
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should render the IconComponent 1`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={{}}
  >
    <div
      id="its-an-icon"
    />
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should render the router link 1`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <routerLink
    className=""
    isNavLink={true}
    style={{}}
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </routerLink>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should render without a tooltip wrapper 1`] = `
<LinkBase
  className=""
  style={{}}
>
  <span
    className="left-sidebar-link-text"
  >
    Feed
  </span>
</LinkBase>
`;

exports[`feature/left-sidebar/LeftSidebarLink should use a custom className 1`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className="custom-className"
    style={{}}
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should use custom theme based on selected link and theme 1`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={
      {
        "boxShadow": "inset 2px 0 0 #345678",
      }
    }
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should use custom theme based on selected link and theme 2`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={{}}
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should use custom theme based on selected link and theme 3`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={
      {
        "boxShadow": undefined,
      }
    }
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink should use custom theme based on selected link and theme 4`] = `
<Tooltip
  className="nav-link-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={{}}
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;

exports[`feature/left-sidebar/LeftSidebarLink tooltip should take class from state 1`] = `
<Tooltip
  className="nav-link-tooltip is-visible"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="middle-right"
  text="Feed"
  theme="default"
>
  <LinkBase
    className=""
    style={{}}
  >
    <span
      className="left-sidebar-link-text"
    >
      Feed
    </span>
  </LinkBase>
</Tooltip>
`;
